# warhundred-rs

./: .dockerignore  .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  build.rs  clippy.toml  database.db  diesel.toml  docker-stack.yaml  entrypoint.sh  package-lock.json  test.db
.github/workflows/: docker-build.yml  docker-stack-deploy.yml
.junie/: guidelines.md
game_grid/: Cargo.toml
game_grid/src/: lib.rs  tests.rs
src/: lib.rs  main.rs
src/app/: app_state.rs  db.rs  error.rs  grid.rs  mod.rs  redis.rs  schema.rs
src/app/domain/: player_repository.rs
src/app/middleware/: cache_middleware.rs  mod.rs  player_middleware.rs  static_tables_cache_middleware.rs
src/app/migrations/00000000000000_diesel_initial_setup/: psql_down.sql  up.sql
src/app/model/: cache.rs  mod.rs  player.rs  player_repository.rs  static.rs
src/app/protos/: _.rs  messages.proto  mod.rs
src/app/routes/: mod.rs  profile_routes.rs  root_routes.rs
tests/: example_test.rs  player_middleware_test.rs  player_repository_test.rs
tests/common/: mod.rs
warhundred-app/: Cargo.toml
warhundred-app/migrations/00000000000000_diesel_initial_setup/: up.sql
warhundred-app/src/: app_state.rs  main.rs  schema.rs
warhundred-app/src/routes/: initial_routes.rs
warhundred-be/: .gitignore  Cargo.toml  diesel.toml
warhundred-be/migrations/00000000000000_diesel_initial_setup/: down.sql  psql_up.sql  up.sql
warhundred-be/sql/: init.sql
warhundred-be/src/: app_state.rs  error.rs  grid.rs  lib.rs  main.rs  schema.rs
warhundred-be/src/domain/: player_repository.rs
warhundred-be/src/routes/: initial_routes.rs  root_routes.rs
warhundred-be/src/utils/: json_extractor.rs
warhundred-fe/: .env  index.html  package-lock.json  package.json  vite.config.js
warhundred-fe/.junie/: guidelines.md
warhundred-fe/docs/: tasks.md
warhundred-fe/src/: App.jsx  index.css  main.jsx  routes.jsx
warhundred-fe/src/components/RegisterForm/: RegisterForm.css  RegisterForm.jsx
warhundred-fe/src/components/ui/: Button.css  Button.example.jsx  Button.jsx  Button.test.jsx  Input.css  Input.example.jsx  Input.jsx  Input.test.jsx
warhundred-fe/src/context/: AuthProvider.jsx  AuthProvider.test.jsx  GameStateContext.jsx  GameStateContext.test.jsx
warhundred-fe/src/pages/EntryPage/: EntryPage.css  EntryPage.jsx  EntryPage.test.jsx
warhundred-fe/src/pages/EntryPage/components/: LoginForm.jsx  RegisterForm.jsx
warhundred-fe/src/pages/GameWindow/: GameWindow.css  GameWindow.jsx
warhundred-fe/src/pages/GameWindow/components/: BaseCanvas.jsx  BaseCanvas.test.jsx  BattleCanvas.jsx  BattleCanvas.test.jsx  TownCanvas.jsx  TownCanvas.test.jsx
warhundred-fe/src/pages/MainPage/: MainPage.css  MainPage.jsx  MainPage.test.jsx
warhundred-fe/src/pages/MainPage/components/: Chat.jsx  Chat.test.jsx  LoginForm.jsx  PlayerMiniProfile.jsx  PlayerMiniProfile.test.jsx  PlayersInZone.jsx  PlayersInZone.test.jsx  RegisterForm.jsx
warhundred-fe/src/pages/PlayerProfile/: PlayerProfile.css  PlayerProfile.jsx
warhundred-fe/src/services/: authService.js  authService.test.js  playerService.js
warhundred-fe/src/util/: utils.js  utils.test.js
warhundred-fe/src/util/components/: ErrorBoundary.jsx  ErrorBoundary.test.jsx  Missing.jsx  RequireAuth.jsx  RequireAuth.test.jsx
warhundred-game/: Cargo.toml
warhundred-game-grid/: Cargo.toml
warhundred-game-grid/src/: lib.rs  tests.rs
warhundred-game/sql/: init.sql
warhundred-game/src/: main.rs
warhundred-web/: Cargo.toml
warhundred-web/src/: main.rs
warhundred-web/src/routes/: initial_routes.rs  mod.rs  player_routes.rs
warhundred-web/src/utils/: json_extractor.rs
