[package]
name = "warhundred-rs"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
async-trait = "0.1"
axum = "0.8.1"
axum-login = "0.17.0"
axum-macros = "0.5.0"
chrono = "0.4.40"
deadpool-diesel = { version = "0.6", features = ["sqlite", "rt_tokio_1", "tracing"] }
diesel = { version = "2.2", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
grid = "0.11.0" # Don't updaete the version, 0.12.0 has a breaking changes
lazy_static = "1.5.0"
mime = "0.3.17"
password-auth = "1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bon = "3.5.1"

[dev-dependencies]
axum-test = { version = "17.2.0" }
rstest = "0.25.0"
testcontainers = { version = "0.23.1", features = ["reqwest"] }
testcontainers-modules = { version = "0.11.5", features = [] }

[[bin]]
name = "main"
path = "src/bin/main.rs"

[features]
it_test = []

[lints.rust]
dead_code = "allow"
unsafe_code = "forbid"
