[package]
name = "warhundred-rs"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.84.1"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.1"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
bb8 = "0.8.6"
bon = "3.5.1"
chrono = "0.4.40"
deadpool-diesel = { version = "0.6", features = ["sqlite", "rt_tokio_1", "tracing"] }
diesel = { version = "2.2", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
grid = "0.11.0" # Don't update the version, 0.12.0 has a breaking changes
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
mime = "0.3.17"
password-auth = "1.0"
prost = { version = "0.13.3", features = ["prost-derive"] }
prost-derive = "0.13.3"
prost-types = "0.13.3"
redis = { version = "0.29.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
serde_with_macros = "3.12.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
thiserror = "2.0.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum-test = { version = "17.2.0" }
rstest = "0.25.0"
testcontainers = { version = "0.23.1", features = ["reqwest"] }
testcontainers-modules = { version = "0.11.5", features = ["redis"] }

[build-dependencies]
prost-build = "0.13.3"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[features]
local = []
it_test = []

[lints.rust]
dead_code = "allow"
unsafe_code = "forbid"
