[package]
name = "warhundred-app"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.82"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
axum-macros = { workspace = true }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
password-auth = { workspace = true }
serde = {workspace = true}
serde_json = { workspace = true }
