[package]
name = "warhundred-be"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.75"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-login = "0.12.0"
axum-macros = "0.4"
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
password-auth = "1.0.0"
serde_json = "1.0.111"
async-trait = "0.1.77"
