[package]
name = "warhundred-be"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.82"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
deadpool-diesel = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
password-auth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

grid = "0.11.0"
lazy_static = "1.5.0"

[features]
it_test = []

[lints.rust]
dead_code = "allow"
unsafe_code = "forbid"
