[package]
name = "warhundred-game-grid"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# don't upgrade it to 0.12+, it's broken for grid subarray indexing
grid = "0.11.0"
lazy_static = "1.4.0"