[package]
name = "warhundred-game"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
diesel = { version = "2.1.4", features = ["sqlite", "postgres"] }
serde = "1.0.193"
serde_json = "1.0.110"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
warhundred-game-grid = {path = "../warhundred-game-grid"}
