[package]
name = "warhundred-web"
version = "0.1.0"
authors = ["Sasha Syrotenko <alex.syrotenko.official@gmail.com>"]
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-login = "0.12.0"
axum-macros = "0.4"
argon2 = "0.5.2"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
dotenvy = "0.15.7"
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }
# Local modules
warhundred-be = {path = "../warhundred-be"}
warhundred-game-grid = {path = "../warhundred-game-grid"}
mime = "0.3.17"
